--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>移动端俄罗斯方块</title>
+  <title>俄罗斯方块</title>
   <style>
     * {
       margin: 0;
